// Estados do player Clappr
export enum State {
  NONE = 'none',
  IDLE = 'idle',
  PLAYING = 'playing',
  PAUSED = 'paused',
  STALLING = 'stalling',
  ERROR = 'error',
}