class Quality {
  constructor(label, bitrate, resolution) {
    this.label = label;
    this.bitrate = bitrate;
    this.resolution = resolution;
  }
}

export default Quality;
